Hoje eu fiz a estrutura inicial da minha pagina de jogos HTML e tambem relembrei sobre o git repositorio.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
 <!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meus Jogos</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <h1>Meus Jogos</h1>
+        <nav>
+            <a href="#jogos">Jogos</a>
+            <a href="#sobre">Sobre</a>
+        </nav>
+    </header>
+
+    <main>
+        <section id="Jogos">
+            <h2>Meus Projetos</h2>
+            <div class="container-jogos">
+                <!--Exemplo de card de jogo-->
+            </div class="card-jogo">
+            <h3>Jogo 1</h3>
+            <p>Descrição de jogo vira aqui</p>
+            <a href="#">Jogar</a>
+            <div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>Criado por Guba</p>
+    </footer>
+</body>
+
+</html>
