--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
 <!DOCTYPE html>
+<html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Jogos Do Guba</title>
+
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Fuzzy+Bubbles:wght@400;700&family=Modak&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <header class="site-header">
+            <div class="menu">
+                MENU
+            </div>
+                <input type="text" class="search-box" placeholder="Digite Aqui Para Achar Jogos">
+            <div class="user-icon">
+                <i class="fa-regular fa-user"></i> Sign In
+            </div>
+        </header>
+    </body>
+</html>
