--- a/index.html
+++ b/index.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Jogos Do Guba</title>
 
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Fuzzy+Bubbles:wght@400;700&family=Modak&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <header class="site-header">
-            <div class="menu">
-                MENU
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jogos Do Guba</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Fuzzy+Bubbles:wght@400;700&family=Modak&display=sw" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Fuzzy+Bubbles:wght@400;700&family=Mochiy+Pop+One&family=Modak&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header class="site-header">
+        <div class="menu">
+            MENU
+        </div>
+        <input type="text" class="search-box" placeholder="Digite Aqui Para Achar Jogos">
+        <div class="user-icon">
+            <i class="fa-regular fa-user"></i> Sign In
+        </div>
+    </header>
+
+    <div class="main-content">
+        <div class="game-container">
+            <div class="game-frame">
+                <iframe src="https://guba531.github.io/jogosdoguba/" frameborder="0"></iframe>
             </div>
-                <input type="text" class="search-box" placeholder="Digite Aqui Para Achar Jogos">
-            <div class="user-icon">
-                <i class="fa-regular fa-user"></i> Sign In
+
+            <div class="game-info">
+                <h2 class="game-title">Jogo Bricks</h2>
+                <div class="game-description">
+                    <p>Explore este incrível jogo onde você pode embarcar em uma aventura emocionante. Com gráficos incríveis e jogabilidade envolvente, este jogo oferece horas de diversão.</p>
+                    <p>Desenvolvido com tecnologias modernas, este título apresenta mecânicas inovadoras e desafios que testarão suas habilidades.</p>
+                </div>
+                <button class="play-button">
+                    Jogar Agora!
+                </button>
             </div>
-        </header>
-    </body>
+        </div>
+    </div>
+</body>
+
 </html>
