Hoje eu fiz um pouco de css e criei o game frame, student logo e logo contain

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <div class="user-icon">
             <i class="fa-regular fa-user"></i> Sign In
         </div>
+        
+        <div class="logo-contain-outside">
+            <img src="images/Logo_guba.png" alt="Logo_guba" class="student-logo">
+        </div>
     </header>
 
     <div class="main-content">
