Hoje eu atualizei o link do iframe

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="main-content">
         <div class="game-container">
             <div class="game-frame">
-                <iframe src="https://guba531.github.io/jogosdoguba/" frameborder="0"></iframe>
+                <iframe src="https://guba531.github.io/Jogo-Bricks/" frameborder="0"></iframe>
             </div>
 
             <div class="game-info">
