Hoje eu aprendi a fazer o onclick, que abre uma nova janela com o conteudo desejado

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Fuzzy+Bubbles:wght@400;700&family=Modak&display=sw" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Fuzzy+Bubbles:wght@400;700&family=Mochiy+Pop+One&family=Modak&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Fuzzy+Bubbles:wght@400;700&family=Modak&display=sw"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Fuzzy+Bubbles:wght@400;700&family=Mochiy+Pop+One&family=Modak&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +25,7 @@
         <div class="user-icon">
             <i class="fa-regular fa-user"></i> Sign In
         </div>
-        
+
         <div class="logo-contain-outside">
             <img src="images/Logo_guba.png" alt="Logo_guba" class="student-logo">
         </div>
@@ -36,10 +40,12 @@
             <div class="game-info">
                 <h2 class="game-title">Jogo Bricks</h2>
                 <div class="game-description">
-                    <p>Explore este incrível jogo onde você pode embarcar em uma aventura emocionante. Com gráficos incríveis e jogabilidade envolvente, este jogo oferece horas de diversão.</p>
-                    <p>Desenvolvido com tecnologias modernas, este título apresenta mecânicas inovadoras e desafios que testarão suas habilidades.</p>
+                    <p>Explore este incrível jogo onde você pode embarcar em uma aventura emocionante. Com gráficos
+                        incríveis e jogabilidade envolvente, este jogo oferece horas de diversão.</p>
+                    <p>Desenvolvido com tecnologias modernas, este título apresenta mecânicas inovadoras e desafios que
+                        testarão suas habilidades.</p>
                 </div>
-                <button class="play-button">
+                <button onclick="window.open('https://guba531.github.io/Jogo-Bricks/', '_blank')" class="play-button">
                     Jogar Agora!
                 </button>
             </div>
